--- a/index.html
+++ b/index.html
@@ -2712,7 +2712,7 @@
                                     <div class="carousel-images">
                                         <img src="/photo7.jpg" alt="foto1">
                                         <img src="/photo8.jpg" alt="foto2">
-                                        <img src="/photo9.jpg" alt="foto3">
+                                        <img src="/photo9.JPG" alt="foto3">
                                         <img src="/photo10.png" alt="foto4">
                                         <img src="/photo11.png" alt="foto5">
                                         <img src="/photo12.png" alt="foto6">
