--- a/index.html
+++ b/index.html
@@ -1971,7 +1971,7 @@
                                                         <tr>
                                                             <td class="ContainersHeaderP">
                                                                 <p class="TextoHeader1">
-                                                                    Cuernavaca, Mor. testo
+                                                                    Cuernavaca, Mor.
                                                                 </p>
                                                             </td>
                                                             <td class="ContainersHeaderIMG">
@@ -2029,32 +2029,6 @@
 
 
 
-
-
-                    <!-- <table class="TableCounter">
-                        <tr>
-                            <td class="">
-                                <div class="countdown-container">
-                                    <div class="countdown-item">
-                                        <span id="days"></span>
-                                        <div class="label">Días</div>
-                                    </div>
-                                    <div class="countdown-item">
-                                        <span id="hours"></span>
-                                        <div class="label">horas</div>
-                                    </div>
-                                    <div class="countdown-item">
-                                        <span id="minutes"></span>
-                                        <div class="label">minutos</div>
-                                    </div>
-                                    <div class="countdown-item">
-                                        <span id="seconds"></span>
-                                        <div class="label">segundos</div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </table> -->
                     <script defer>
                         function startCountdown(targetDate) {
                             const daysSpan = document.getElementById('days');
@@ -2241,7 +2215,7 @@
 
                                 <div class="ie-carouselFallback" style="text-align:center">
                                     <span style="display:block;"><img
-                                            src="https://image.mc.groupon.com/lib/fe3e157075640475711070/m/1/480x200_desktop+banner_PL.png"
+                                            src=""
                                             alt="" width="100%" style="max-width:100%; vertical-align:middle"></span>
 
                                 </div>
@@ -2259,12 +2233,12 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img src="/photo1.jpg" alt="foto1">
-                                        <img src="/photo2.jpg" alt="foto2">
-                                        <img src="/photo3.jpg" alt="foto3">
-                                        <img src="/photo4.jpg" alt="foto4">
-                                        <img src="/photo5.jpg" alt="foto5">
-                                        <img src="/photo6.JPG" alt="foto6">
+                                        <img loading="lazy" src="/photo1.jpg" alt="foto1">
+                                        <img loading="lazy" src="/photo2.jpg" alt="foto2">
+                                        <img loading="lazy" src="/photo3.jpg" alt="foto3">
+                                        <img loading="lazy" src="/photo4.jpg" alt="foto4">
+                                        <img loading="lazy" src="/photo5.jpg" alt="foto5">
+                                        <img loading="lazy" src="/photo6.JPG" alt="foto6">
                                     </div>
                                 </div>
                             </td>
@@ -2691,7 +2665,7 @@
                         <tr>
                             <td>
                                 <div class="MalteseDiv">
-                                    <img class="MalteseIMG"
+                                    <img loading="lazy" class="MalteseIMG"
                                         src="./Screenshot_20250818_120927_Instagram-removebg-preview.png" alt=""
                                         srcset="">
                                 </div>
@@ -2710,12 +2684,12 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img src="/photo7.jpg" alt="foto1">
-                                        <img src="/photo8.jpg" alt="foto2">
-                                        <img src="/photo9.JPG" alt="foto3">
-                                        <img src="/photo10.png" alt="foto4">
-                                        <img src="/photo11.png" alt="foto5">
-                                        <img src="/photo12.png" alt="foto6">
+                                        <img loading="lazy" src="/photo7.jpg" alt="foto1">
+                                        <img loading="lazy" src="/photo8.jpg" alt="foto2">
+                                        <img loading="lazy" src="/photo9.JPG" alt="foto3">
+                                        <img loading="lazy" src="/photo10.png" alt="foto4">
+                                        <img loading="lazy" src="/photo11.png" alt="foto5">
+                                        <img loading="lazy" src="/photo12.png" alt="foto6">
                                     </div>
                                 </div>
                             </td>
@@ -2731,7 +2705,7 @@
                                         <div class="colmidFormulario">
                                             <div class="colleftFormulario">
                                                 <div class="LeftFormulario">
-                                                    <img src="https://i.ibb.co/wNNC3TN5/PinkLeft.png" alt="" border="0"
+                                                    <img loading="lazy" src="https://i.ibb.co/wNNC3TN5/PinkLeft.png" alt="" border="0"
                                                         class="ImagenIzquierda">
                                                 </div>
                                                 <div class="MiddleFormulario">
@@ -2915,7 +2889,7 @@
                                                     </table>
                                                 </div>
                                                 <div class="RightFormulario">
-                                                    <img src="https://i.ibb.co/fGppd2dC/Pink-Right.png" alt="Derecha"
+                                                    <img loading="lazy" src="https://i.ibb.co/fGppd2dC/Pink-Right.png" alt="Derecha"
                                                         border="0" class="ImagenDerecha">
                                                 </div>
 
@@ -3047,7 +3021,7 @@
                                         <div class="card-front FichaContacto">
                                             <p class="TextoContacto" style="padding-top: 9%;">Eduardo
                                             </p>
-                                            <img class="NekoIMG" src="/Neko1.png" alt="">
+                                            <img loading="lazy" class="NekoIMG" src="/Neko1.png" alt="">
                                         </div>
                                         <!-- Dorso -->
                                         <div class="card-back FichaContacto">
@@ -3069,7 +3043,7 @@
                                         <div class="card-front FichaContacto">
                                             <p class="TextoContacto" style="padding-top: 9%;">Karla
                                             </p>
-                                            <img class="NekoIMG" src="/Neko2.png" alt="">
+                                            <img loading="lazy" class="NekoIMG" src="/Neko2.png" alt="">
                                         </div>
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">👰🏽‍♀️ Karla *nunca me llames por mi segundo
@@ -3089,7 +3063,7 @@
                                     <div class="card-inner">
                                         <div class="card-front FichaContacto">
                                             <p class="TextoContacto" style="padding-top: 9%;">Wedding Planner</p>
-                                            <img class="NekoIMG" src="/Neko3.png" alt="">
+                                            <img loading="lazy" class="NekoIMG" src="/Neko3.png" alt="">
                                         </div>
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">🧑🏽‍💼 Soy Yahir</p>
