--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karla & Lalo</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://images.fineartamerica.com/images/artworkimages/medium/1/chelsea-hendi-fahmi-transparent.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&family=Patrick+Hand&display=swap"
@@ -2233,12 +2235,12 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img loading="lazy" src="/photo1.jpg" alt="foto1">
-                                        <img loading="lazy" src="/photo2.jpg" alt="foto2">
-                                        <img loading="lazy" src="/photo3.jpg" alt="foto3">
-                                        <img loading="lazy" src="/photo4.jpg" alt="foto4">
-                                        <img loading="lazy" src="/photo5.jpg" alt="foto5">
-                                        <img loading="lazy" src="/photo6.JPG" alt="foto6">
+                                        <img loading="lazy" src="/photo1.webp" alt="foto1">
+                                        <img loading="lazy" src="/photo2.webp" alt="foto2">
+                                        <img loading="lazy" src="/photo3.webp" alt="foto3">
+                                        <img loading="lazy" src="/photo4.webp" alt="foto4">
+                                        <img loading="lazy" src="/photo5.webp" alt="foto5">
+                                        <img loading="lazy" src="/photo6.webp" alt="foto6">
                                     </div>
                                 </div>
                             </td>
