--- a/index.html
+++ b/index.html
@@ -2686,12 +2686,12 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img loading="lazy" src="/photo7.jpg" alt="foto1">
-                                        <img loading="lazy" src="/photo8.jpg" alt="foto2">
-                                        <img loading="lazy" src="/photo9.JPG" alt="foto3">
-                                        <img loading="lazy" src="/photo10.png" alt="foto4">
-                                        <img loading="lazy" src="/photo11.png" alt="foto5">
-                                        <img loading="lazy" src="/photo12.png" alt="foto6">
+                                        <img loading="lazy" src="/photo7.webp" alt="foto1">
+                                        <img loading="lazy" src="/photo8.webp" alt="foto2">
+                                        <img loading="lazy" src="/photo9.webp" alt="foto3">
+                                        <img loading="lazy" src="/photo10.webp" alt="foto4">
+                                        <img loading="lazy" src="/photo11.webp" alt="foto5">
+                                        <img loading="lazy" src="/photo12.webp" alt="foto6">
                                     </div>
                                 </div>
                             </td>
