--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karla & Lalo</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://images.fineartamerica.com/images/artworkimages/medium/1/chelsea-hendi-fahmi-transparent.png">
+    <link rel="icon" type="image/png" sizes="132x132" href="./Kwon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./Kwon.png">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
