--- a/index.html
+++ b/index.html
@@ -977,8 +977,9 @@
         text-align: justify;
     }
 
-    .Forumulario {
+    .Formulario {
         width: 100%;
+        margin-top: 5%;
     }
 
     .LeftFormulario,
@@ -1332,7 +1333,7 @@
 
     .faq-answer.open {
         padding: 15px 20px;
-        max-height: 200px;
+        max-height: 430px;
     }
 
 
@@ -1354,17 +1355,18 @@
     }
 
     .TextoContacto {
-        font-family: 'montserrat';
         font-size: 30px;
         font-weight: 600;
         color: #395a9d;
+        font-family: 'Carme' !important;
     }
 
     .TextoContactoCards {
-        font-family: 'montserrat';
         font-size: 20px;
         font-weight: 600;
         color: #395a9d;
+        font-family: 'Carme' !important;
+          padding: 0 3%;
     }
 
     .card-inner {
@@ -2305,7 +2307,7 @@
                                     <h2 class="H2Donde">¿Dónde? <span><a
                                                 href="https://maps.app.goo.gl/1WXCSaaM65sEmmF76"
                                                 style="color:#fcc85e">Ver
-                                                Mapa</a></span> <br><span>Jardín Santa Bárbara</span></h2>
+                                                Mapa</a></span> <br>Jardín Santa Bárbara</h2>
                                 </div>
                             </td>
                         </tr>
@@ -2324,7 +2326,7 @@
                                                 stroke-linejoin="round"></path>
                                         </g>
                                     </svg>
-                                    <h2 class="H2Cuando">¿Cuándo? <br><span>Diciembre 13, 2025. 2:30 PM</span></h2>
+                                    <h2 class="H2Cuando">¿Cuándo? <br>Diciembre 13, 2025. 2:30 PM</h2>
                                 </div>
                             </td>
                         </tr>
@@ -2737,6 +2739,7 @@
                                                     <table class="">
                                                         <tr>
                                                             <td>
+                                                                <h1>¡Confirma tu asistencia!</h1>
                                                                 <p class="MainTxtFormulario">
                                                                     Emplea el código que te compartimos para confirmar
                                                                     tu Asistencia!
