--- a/index.html
+++ b/index.html
@@ -3055,7 +3055,7 @@
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">🤵🏾 Tambien conocido como Lalo</p>
                                             <p class="TextoContactoCards"></p>
-                                            <p class="TextoContactoCards" style="margin: 0px;">(+34) 685-703-622</p>
+                                            <p class="TextoContactoCards" style="margin: 0px; color: #395a9d !important;">(+34) 685-703-622</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/ellalo_inmadrid/">@ellalo_inmadrid</a>
@@ -3077,7 +3077,7 @@
                                             <p class="TextoContactoCards">👰🏽‍♀️ Karla *nunca me llames por mi segundo
                                                 nombre*</p>
                                             <p class="TextoContactoCards"></p>
-                                            <p class="TextoContactoCards" style="margin: 0px;">(+34) 625-830-666</p>
+                                            <p class="TextoContactoCards" style="margin: 0px; color: #395a9d !important;">(+34) 625-830-666</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/krawr_uwu/">@krawr_uwu</a></p>
@@ -3096,7 +3096,7 @@
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">🧑🏽‍💼 Soy Yahir</p>
                                             <p class="TextoContactoCards"></p>
-                                            <p class="TextoContactoCards" style="margin: 0px;">(+52) 777-612-6623</p>
+                                            <p class="TextoContactoCards" style="margin: 0px; color: #395a9d !important;">(+52) 777-612-6623</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/tubodaen_cuerna/">@tubodaen_cuerna</a>
