--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
         gap: 20px;
         font-family: Arial, sans-serif;
         padding: 30px;
+        border-bottom: 1px ridge #fcc85e;
     }
 
     .DivsMenu {
@@ -1366,7 +1367,7 @@
         font-weight: 600;
         color: #395a9d;
         font-family: 'Carme' !important;
-          padding: 0 3%;
+        padding: 0 4%;
     }
 
     .card-inner {
@@ -1630,6 +1631,14 @@
             margin: 2%;
         }
 
+        .Sellos {
+            background-image: url(./Sellos.png);
+            background-position: initial;
+            background-repeat: repeat;
+            background-size: contain;
+            height: 530px;
+        }
+
         /* -- FICHAS TEXTO + IMÁGENES -- */
         .FichasII tr {
             display: flex;
@@ -1649,7 +1658,7 @@
         /* -- SELLOS -- */
         .H1Sellos {
             font-size: 50px;
-            padding: 10% 5%;
+            padding: 4% 5%;
         }
 
         .H2Donde,
@@ -2350,7 +2359,7 @@
                     <table class="FichasII">
                         <tr>
                             <td class="TdFichas">
-                                <a href="#Alojamiento">
+                                <a href="./Alojamiento.html#Alojamiento">
                                     <div class="DivIMG">
                                         <div class="FichasIMG">
                                             <svg class="SVGAlojamiento1" fill="#395a9d" version="1.1" id="Layer_1"
@@ -2514,7 +2523,7 @@
                                     </div>
                                 </a>
 
-                                <a href="#Transporte">
+                                <a href="./Transporte.html#Transporte">
 
                                     <div class="DivIMG">
                                         <div class="FichasIMG">
@@ -3055,7 +3064,8 @@
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">🤵🏾 Tambien conocido como Lalo</p>
                                             <p class="TextoContactoCards"></p>
-                                            <p class="TextoContactoCards" style="margin: 0px; color: #395a9d !important;">(+34) 685-703-622</p>
+                                            <p class="TextoContactoCards"
+                                                style="margin: 0px; color: #395a9d !important;">(+34) 685-703-622</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/ellalo_inmadrid/">@ellalo_inmadrid</a>
@@ -3077,7 +3087,8 @@
                                             <p class="TextoContactoCards">👰🏽‍♀️ Karla *nunca me llames por mi segundo
                                                 nombre*</p>
                                             <p class="TextoContactoCards"></p>
-                                            <p class="TextoContactoCards" style="margin: 0px; color: #395a9d !important;">(+34) 625-830-666</p>
+                                            <p class="TextoContactoCards"
+                                                style="margin: 0px; color: #395a9d !important;">(+34) 625-830-666</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/krawr_uwu/">@krawr_uwu</a></p>
@@ -3096,7 +3107,8 @@
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">🧑🏽‍💼 Soy Yahir</p>
                                             <p class="TextoContactoCards"></p>
-                                            <p class="TextoContactoCards" style="margin: 0px; color: #395a9d !important;">(+52) 777-612-6623</p>
+                                            <p class="TextoContactoCards"
+                                                style="margin: 0px; color: #395a9d !important;">(+52) 777-612-6623</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/tubodaen_cuerna/">@tubodaen_cuerna</a>
@@ -3115,88 +3127,6 @@
                             });
                         });
                     </script>
-
-
-                    <table id="Alojamiento" class="Hotel" style="width: 100%; border-spacing: 0; text-align: center;">
-                        <tr>
-                            <td colspan="2">
-                                <div class="DivHotel">
-                                    <p class="PHotel1">
-                                        ¡Sabemos que algunos de ustedes vienen de lejos para acompañarnos en esta
-                                        aventura.
-                                        Aquí les dejamos algunas <span style="color: #e473b1;">sugerencias de
-                                            alojamiento</span> cercano al Jardín Santa
-                                        Bárbara,
-                                        para que su estancia sea cómoda y puedan disfrutar al máximo sin preocuparse por
-                                        el
-                                        regreso.
-                                    </p>
-
-                                    <p class="PHotel1" style="font-weight: bold;">
-                                        ¡Tenemos Muchas opciones Según tu presupuesto!
-                                    </p>
-
-                                    <p class="PHotel2">
-                                        <span style="font-weight: bolder;">Hotel Quinta Mina:</span> <br><br>
-                                        Una excelente opción para quienes desean estar muy cerca del lugar del evento,
-                                        ya que se encuentra justo a un costado del jardín. <br>
-                                        El hotel dispone de un <span style="color: #e473b1; font-weight:bold">número
-                                            limitado de habitaciones</span>, con capacidad para hospedar hasta <span
-                                            style="color: #e473b1; font-weight:bold">cuatro personas por
-                                            habitación</span>. <br>
-                                        La tarifa cubre el hospedaje por todo el fin de semana e incluye desayuno
-                                        diario, así como un cóctel de celebración por la noche.
-                                        <br>
-                                        <!-- <span style="color: #51cddb; font-weight:bold">Reserva AQUÍ</span> -->
-                                        <a class="AReserva" style="color: #51cddb; font-weight:bold"
-                                            href="https://hospedaje.ramirezgastronomia.com/productos/karla-barajas-eduardo-tellez-13-dic-2025-anticipo-de-1-habitacion-en-quinta-mina-sb-el-resto-se-paga-a-la-llegada-en-efectivo-o-transferencia/">Reserva
-                                            Aquí</a>
-                                    </p>
-
-                                    <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d863.0709055169916!2d-99.15839651306884!3d18.869951648461416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce75544acdee97%3A0xd8cb80fb847a9dc0!2sHotel%20Quinta%20Mina!5e0!3m2!1ses!2ses!4v1755361476526!5m2!1ses!2ses"
-                                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-                                    <p class="PHotel2" style="">
-                                        <span style="font-weight: bolder;">Grand Fiesta Americana Sumiya
-                                            Cuernavaca:</span> <br><br>
-                                        Si deseas hospedarte en un lugar con <span
-                                            style="color: #e473b1; font-weight:bold">buen servicio</span>y a una
-                                        distancia razonable del evento, este hotel es una excelente opción. Además,
-                                        hemos gestionado un código de descuento especial para ti, que podrás utilizar al
-                                        momento de hacer tu reserva.<br>
-                                        <a class="AReserva" style="color: #51cddb; font-weight:bold"
-                                            href="https://www.fiestamericanatravelty.com/grand-fiesta-americana/">Reserva
-                                            Aquí</a>
-                                    </p>
-
-                                    <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2022.8289669724302!2d-99.19206457761143!3d18.89128211157306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cddf6051f1f437%3A0x68563ce504ce6185!2sGrand%20Fiesta%20Americana%20Sumiya%20Cuernavaca!5e0!3m2!1ses!2ses!4v1755361574638!5m2!1ses!2ses"
-                                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-                                    <p class="PHotel2" style="">
-                                        <span style="font-weight: bolder;">HACIENDA COCOYOC:</span> <br><br>
-                                        También contamos con esta opción de hotel, un poco <span
-                                            style="color: #e473b1; font-weight:bold">más alejada</span>, pero con un
-                                        <span style="color: #e473b1; font-weight:bold">excelente servicio</span>.<br>
-                                        Hemos gestionado un código de descuento especial para quienes deseen hacer su
-                                        reserva. <br>
-                                        <a class="AReserva" style="color: #51cddb; font-weight:bold"
-                                            href="https://hcocoyoc.com/habitaciones/">Reserva
-                                            Aquí</a>
-                                    </p>
-
-                                    <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6591.384532361617!2d-98.98249828477088!3d18.88172863300372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ce6dde90f3c08d%3A0x2265bab3da07fee!2sHACIENDA%20COCOYOC%20HOTEL!5e0!3m2!1ses!2ses!4v1755361621743!5m2!1ses!2ses"
-                                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                </div>
-                            </td>
-                        </tr>
-                    </table>
 
 
                     <table id="Transporte" class="Transporte"
