--- a/Alojamiento.html
+++ b/Alojamiento.html
@@ -1628,6 +1628,8 @@
             flex-direction: column;
             gap: 10px;
             padding: 20px 10px;
+            border-bottom: 0px ridge #fcc85e;
+
         }
 
         .DivsMenu {
