--- a/index.html
+++ b/index.html
@@ -1624,6 +1624,8 @@
             flex-direction: column;
             gap: 10px;
             padding: 20px 10px;
+            border-bottom: 0px ridge #fcc85e;
+
         }
 
         .DivsMenu {
@@ -2359,7 +2361,7 @@
                     <table class="FichasII">
                         <tr>
                             <td class="TdFichas">
-                                <a href="./Alojamiento.html#Alojamiento">
+                                <a href="./Alojamiento.html">
                                     <div class="DivIMG">
                                         <div class="FichasIMG">
                                             <svg class="SVGAlojamiento1" fill="#395a9d" version="1.1" id="Layer_1"
@@ -2523,7 +2525,7 @@
                                     </div>
                                 </a>
 
-                                <a href="./Transporte.html#Transporte">
+                                <a href="./Transporte.html">
 
                                     <div class="DivIMG">
                                         <div class="FichasIMG">
