--- a/index.html
+++ b/index.html
@@ -1930,7 +1930,7 @@
             transform: translateX(0);
         }
 
-        /*        13% {
+        13% {
             transform: translateX(0);
         }
 
@@ -1938,7 +1938,6 @@
             transform: translateX(-100%);
         }
 
-*/
 
         30% {
             transform: translateX(-100%);
@@ -1949,7 +1948,6 @@
         }
 
 
-        /*
         46% {
             transform: translateX(-200%);
         }
@@ -1957,7 +1955,6 @@
         50% {
             transform: translateX(-300%);
         }
-*/
 
 
         63% {
@@ -1968,8 +1965,6 @@
             transform: translateX(-400%);
         }
 
-
-        /*
         80% {
             transform: translateX(-400%);
         }
@@ -1977,7 +1972,6 @@
         83.3% {
             transform: translateX(-500%);
         }
-*/
 
         96% {
             transform: translateX(-500%);
@@ -2271,9 +2265,9 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img loading="lazy" src="/photo1.webp" alt="foto1">
-                                        <img loading="lazy" src="/photo2.webp" alt="foto2">
-                                        <img loading="lazy" src="/photo3.webp" alt="foto3">
+                                        <img  src="/photo1.webp" alt="foto1">
+                                        <img  src="/photo2.webp" alt="foto2">
+                                        <img  src="/photo3.webp" alt="foto3">
                                         <img loading="lazy" src="/photo4.webp" alt="foto4">
                                         <img loading="lazy" src="/photo5.webp" alt="foto5">
                                         <img loading="lazy" src="/photo6.webp" alt="foto6">
