--- a/index.html
+++ b/index.html
@@ -1625,12 +1625,19 @@
             gap: 10px;
             padding: 20px 10px;
             border-bottom: 0px ridge #fcc85e;
-
         }
 
         .DivsMenu {
             width: 100%;
             margin: 2%;
+        }
+
+        .carousel {
+            height: 50vh;
+        }
+
+        .carousel-images img {
+            height: 50vh;
         }
 
         .Sellos {
@@ -2265,9 +2272,9 @@
                                 </div>
                                 <div class="carousel">
                                     <div class="carousel-images">
-                                        <img  src="/photo1.webp" alt="foto1">
-                                        <img  src="/photo2.webp" alt="foto2">
-                                        <img  src="/photo3.webp" alt="foto3">
+                                        <img src="/photo1.webp" alt="foto1">
+                                        <img src="/photo2.webp" alt="foto2">
+                                        <img src="/photo3.webp" alt="foto3">
                                         <img loading="lazy" src="/photo4.webp" alt="foto4">
                                         <img loading="lazy" src="/photo5.webp" alt="foto5">
                                         <img loading="lazy" src="/photo6.webp" alt="foto6">
