--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@
         }
 
         .carousel {
-            height: 50vh;
+            height: 50vh !important;
         }
 
         .carousel-images img {
